<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.mobilenow.PlanejamentoActivity" >

    <org.holoeverywhere.widget.Switch
        android:id="@+id/domingo_switch"
        style="@style/SimNaoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:checked="true"
        android:text="@string/domingo"
        android:visibility="visible" />

    <org.holoeverywhere.widget.Switch
        android:id="@+id/segunda_switch"
        style="@style/SimNaoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/domingo_switch"
        android:layout_alignTop="@+id/domingo_switch"
        android:layout_marginTop="31dp"
        android:checked="true"
        android:text="@string/segunda"
        android:visibility="visible" />

    <org.holoeverywhere.widget.Switch
        android:id="@+id/terca_switch"
        style="@style/SimNaoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/segunda_switch"
        android:layout_alignRight="@+id/segunda_switch"
        android:layout_below="@+id/domingo_switch"
        android:checked="true"
        android:text="@string/terca"
        android:visibility="visible" />

    <org.holoeverywhere.widget.Switch
        android:id="@+id/quarta_switch"
        style="@style/SimNaoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/terca_switch"
        android:layout_alignRight="@+id/terca_switch"
        android:layout_below="@+id/terca_switch"
        android:checked="true"
        android:text="@string/quarta"
        android:visibility="visible" />

    <org.holoeverywhere.widget.Switch
        android:id="@+id/sexta_switch"
        style="@style/SimNaoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/quarta_switch"
        android:layout_alignRight="@+id/quarta_switch"
        android:layout_below="@+id/quinta_switch"
        android:checked="true"
        android:text="@string/sexta"
        android:visibility="visible" />

    <org.holoeverywhere.widget.Switch
        android:id="@+id/sabado_switch"
        style="@style/SimNaoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sexta_switch"
        android:layout_alignRight="@+id/domingo_switch"
        android:layout_below="@+id/sexta_switch"
        android:checked="true"
        android:text="@string/sabado"
        android:visibility="visible" />

    <org.holoeverywhere.widget.Switch
        android:id="@+id/quinta_switch"
        style="@style/SimNaoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sexta_switch"
        android:layout_alignRight="@+id/segunda_switch"
        android:layout_below="@+id/quarta_switch"
        android:checked="true"
        android:text="@string/quinta"
        android:visibility="visible" />
    
</RelativeLayout>
