<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/servicebox_site_padding"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/partida_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:text="@string/itinerario_partida"
                android:textColor="?android:textColorSecondary" />

            <AutoCompleteTextView
                android:id="@+id/partida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="3"
                android:ems="10" >

                <requestFocus />
            </AutoCompleteTextView>

            <TextView
                android:id="@+id/destino_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/itinerario_destino"
                android:textColor="?android:textColorSecondary" />

            <AutoCompleteTextView
                android:id="@+id/destino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="3"
                android:ems="10" />
            
            <LinearLayout
                android:id="@+id/layout_com_seedbar"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
                
                <View
                    android:layout_width="0dp"
                    android:layout_height="25dp" />
                
                <TextView
	                android:id="@+id/label_distancia"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="Buscar à 100 m do meu ponto de partida."
	                android:gravity="center_horizontal" 
	                android:textStyle="bold"
	                android:textColor="?android:textColorSecondary" />
                
                <SeekBar
		            android:id="@+id/distancia_localizacao"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_margin="10dp"
		            android:progress="0"
		            android:secondaryProgress="0" />
                
                
           </LinearLayout>     

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.24"
                android:orientation="vertical" >
                
                <View
                    android:layout_width="0dp"
                    android:layout_height="20dp" />
                
                <TextView
	                android:id="@+id/label_buscar_em"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="Buscar itinerário de:."
	                android:gravity="left" 
	                android:textStyle="bold"
	                android:textColor="?android:textColorSecondary" />
                
                <View
                    android:layout_width="0dp"
                    android:layout_height="20dp" />

                <org.holoeverywhere.widget.Switch
                    android:id="@+id/soAmigos_switch"
                    style="@style/SimNaoSwitch"
                    android:layout_width="284dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:checked="true"
                    android:text="@string/prestar_servico_so_amigo"
                    android:visibility="visible" />

                <org.holoeverywhere.widget.Switch
                    android:id="@+id/soAmigosDoAmigos_switch"
                    style="@style/SimNaoSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:checked="true"
                    android:text="@string/prestar_servico_so_amigos_do_amigos"
                    android:visibility="visible" />

                <org.holoeverywhere.widget.Switch
                    android:id="@+id/todos_switch"
                    style="@style/SimNaoSwitch"
                    android:layout_width="283dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:checked="true"
                    android:text="@string/prestar_servico_todos"
                    android:visibility="visible" />

            </LinearLayout>

            <Button
                android:id="@+id/confirmar_itinerario"
                style="@style/ServiceBox.YellowButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/itinerario_confirmar" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>