<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1" 
    android:layout_marginLeft="1dp"
    android:layout_marginRight="1dp">

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/servicebox_site_padding" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" 
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp" >

                    <!-- Thumbnail Image -->
				    <com.android.volley.toolbox.NetworkImageView
				        android:id="@+id/imagem_perfil"
				        android:layout_width="85dp"
				        android:layout_height="85dp"
				        android:layout_alignParentLeft="true"
				        android:scaleType="centerCrop"
				        android:layout_marginRight="8dp" />                     
                    
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/linearDados"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >
                                        
                    <TextView
                        android:id="@+id/nome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nome"/>
                    
                    <TextView
				        android:id="@+id/descricao"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"		        
				        android:hint="descricao"				        
				        />
                </LinearLayout>
                
            </LinearLayout> 
            
            <View
               android:id="@+id/viewPlanejamento"
               android:layout_width="wrap_content"  
               android:layout_height="2dp"             
               android:layout_marginTop="14dp"
               android:layout_weight="1"
               android:background="@drawable/line_separator" />
            
            <TextView
		        android:id="@+id/planejamento"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"		        
		        android:hint="@string/dados_planejamento"		        
		        />
            
            <LinearLayout
                android:id="@+id/linearDiasSemana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

		            <TextView
		                android:id="@+id/diasDaSemana"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginLeft="10dp"
		                android:autoLink="all"		                
		                android:hint="@string/label_dom" />
                
		            
			</LinearLayout>
            
            <TextView
		        android:id="@+id/labelHorario"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"		        
		        android:hint="@string/label_horario"		        
		        />
            
            <LinearLayout
                android:id="@+id/linearHorario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
		            
                      <TextView
				        android:id="@+id/horarioPlanejado"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"	
				        android:layout_marginLeft="10dp"	        
				        android:hint="@string/entre_faixa"		        
				        />
                      
                     
                
           </LinearLayout>
           
             <View
               android:id="@+id/viewPlanejamentoFim"
               android:layout_width="wrap_content"  
               android:layout_height="2dp"             
               android:layout_marginTop="10dp"
               android:layout_weight="1"
               android:background="@drawable/line_separator" />
             
                        
                            <!-- Icone Partida -->
                            <LinearLayout
				                android:layout_width="match_parent"
				                android:layout_height="wrap_content"
				                android:orientation="horizontal" 
				                android:baselineAligned="false">
				
				                <RelativeLayout
				                    android:layout_width="60dp"
				                    android:layout_height="60dp"
				                    android:layout_gravity="center_vertical"
				                    android:layout_marginRight="2dp" >
				
				                    <!-- Thumbnail Image -->
								    <ImageView
								        android:id="@+id/imagem_partida"
								        android:layout_width="50dp"
								        android:layout_height="50dp"
								        android:layout_alignParentLeft="true"
								        android:scaleType="centerCrop"
								        android:src="@drawable/ic_action"
								        android:layout_marginRight="2dp" />                     
				                    
				                </RelativeLayout>
				
				                <LinearLayout
				                    android:id="@+id/linearDadosPartida"
				                    android:layout_width="0dp"
				                    android:layout_height="wrap_content"
				                    android:layout_weight="1"
				                    android:orientation="vertical" >
				                                        
				                    <TextView
				                        android:id="@+id/partida"
				                        android:layout_width="match_parent"
				                        android:layout_height="wrap_content"
				                        android:hint="@string/itinerario_partida"/>
				                    
				                    <TextView
								        android:id="@+id/dadosPartida"
								        android:layout_width="fill_parent"
								        android:layout_height="wrap_content"		        
								        android:hint="descricao"				        
								        />
				                </LinearLayout>
				           </LinearLayout>       
                               <!-- Fim icone partida -->
		             <View
		               android:id="@+id/viewItinerario"
		               android:layout_width="wrap_content"  
		               android:layout_height="2dp"             
		               android:layout_marginTop="10dp"
		               android:layout_weight="1"
		               android:background="@drawable/line_separator" />
		             
		               <!-- Icone destino -->
                            <LinearLayout
				                android:layout_width="match_parent"
				                android:layout_height="wrap_content"
				                android:orientation="horizontal" 
				                android:baselineAligned="false">
				
				                <RelativeLayout
				                    android:layout_width="60dp"
				                    android:layout_height="60dp"
				                    android:layout_gravity="center_vertical"
				                    android:layout_marginRight="2dp" >
				
				                    <!-- Thumbnail Image -->
								    <ImageView
								        android:id="@+id/imagem_destino"
								        android:layout_width="50dp"
								        android:layout_height="50dp"
								        android:layout_alignParentLeft="true"
								        android:scaleType="centerCrop"
								        android:src="@drawable/ic_action_vermelho"
								        android:layout_marginRight="2dp" />                     
				                    
				                </RelativeLayout>
				
				                <LinearLayout
				                    android:id="@+id/linearDadosDestino"
				                    android:layout_width="0dp"
				                    android:layout_height="wrap_content"
				                    android:layout_weight="1"
				                    android:orientation="vertical" >
				                                        
				                    <TextView
				                        android:id="@+id/destino"
				                        android:layout_width="match_parent"
				                        android:layout_height="wrap_content"
				                        android:hint="@string/itinerario_destino"/>
				                    
				                    <TextView
								        android:id="@+id/dadosDestino"
								        android:layout_width="fill_parent"
								        android:layout_height="wrap_content"		        
								        android:hint="descricao"				        
								        />
				                </LinearLayout>
                               <!-- Fim icone partida --> 	             
                         </LinearLayout> 
                        
                            <View
				               android:id="@+id/viewItinerarioFim"
				               android:layout_width="wrap_content"  
				               android:layout_height="2dp"             
				               android:layout_marginTop="10dp"
				               android:layout_weight="1"
				               android:background="@drawable/line_separator" />
                            
                        
                       <LinearLayout
		                android:id="@+id/linearExtra"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:orientation="horizontal" >
				            
		                      <TextView
						        android:id="@+id/labelExtra"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content"	
						        android:layout_marginLeft="10dp"	        
						        android:hint="@string/label_informacao_extra"		        
						        />    
		                      
		                
		           </LinearLayout>     
             
        </LinearLayout>
    </ScrollView> 
    
    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_solicitar"
            style="@style/ServiceBox.YellowButton"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.52"
            android:text="@string/solicitar_carona"
            android:visibility="invisible"
            android:textSize="@dimen/bt_solicitar" />

        <Button
            android:id="@+id/bt_visualizar"
            style="@style/Holo.Button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"
            android:visibility="invisible"
            android:text="@string/bt_visualizar_mapa"
            android:textSize="@dimen/bt_visualizar" />

    </LinearLayout>

</LinearLayout>